<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


  <TextView
      android:id="@+id/tvConsent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:padding="16dp"
      android:text="@string/str_consent"
      android:textColor="@color/primaryTextColor"
      android:textSize="16sp"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/divider"
      />


  <TextView
      android:id="@+id/tvPrivacy"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:padding="16dp"
      android:text="@string/str_privacy_policy"
      android:textColor="@color/primaryTextColor"
      android:textSize="16sp"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/divider"
      />

  <TextView
      android:id="@+id/tvLicense"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:padding="16dp"
      android:text="@string/str_license"
      android:textColor="@color/primaryTextColor"
      android:textSize="16sp"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/divider"
      />


  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/divider"
      />

  <TextView
      android:id="@+id/tvVersion"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:padding="16dp"
      android:text="@string/str_version"
      android:textColor="@color/primaryTextColor"
      android:textSize="16sp"
      />

</LinearLayout>
